# Otus

.github/workflows/: Lesson1-wf.yml  Task1-wf.yml  Task2-wf.yml  Task3-wf.yml
Lesson1/: CMakeLists.txt
Lesson1/src/: CMakeLists.txt  lib.h  main.cpp
Lesson1/tests/: CMakeLists.txt  test_version.cpp
Task1/: CMakeLists.txt
Task1/src/: CMakeLists.txt  lib.h
Task1/tests/: test_version.cpp
Task2/: CMakeLists.txt  ip_filter.cpp
Task3/: CMakeLists.txt  Container.h  MyAllocator.h  main.cpp  utils.h
